--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "dependencies": {
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.34.1"
   },
   "devDependencies": {
     "@types/node": "^15.12.1",
     "@types/react": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "eslint": "^7.28.0",
+    "eslint-plugin-react": "^7.24.0",
     "typescript": "^4.3.2"
   }
 }
