--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,8 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        // suppress errors for missing 'import React' in files
+        "react/react-in-jsx-scope": "off"
     }
 }
